Fix LOD geometry and ambient occlusion